# NetworkSanity

./: NetworkSanity.sln  README.md  RPCSanity.sln
NetworkSanity/: NetworkSanity.cs  NetworkSanity.csproj
NetworkSanity/Core/: ISanitizer.cs  Il2CppMethodInfo.cs  RateLimiter.cs
NetworkSanity/Properties/: AssemblyInfo.cs
NetworkSanity/Sanitizers/: FlatBufferSanitizer.cs  USpeakSanitizer.cs  USpeakSanity.cs  VrcEventSanitizer.cs
RPCSanity/: RPCSanity.cs  RPCSanity.csproj  RateLimiter.cs
RPCSanity/Properties/: AssemblyInfo.cs
RPCSanityNative/: CMakeLists.txt  ratelimiter.cpp  ratelimiter.h  rpcsanitynativeWrapper.cpp
